# gta2_re

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  StdAfx.cpp  appveyor.yml  build.bat  build.py  compare_matches.bat  compare_matches.sh  copy_dlls.sh  dump_data.py  reccmp-project.yml  requirements.txt  resources.rc  set_vc6.bat  setup.py  test.cpp  vc6_setup.py
.github/workflows/: ci.yml
Scripts/: generate_context.py  generate_function_decompme.py  generate_target_asm_for_objs.py  gta2_data_setup.py  ida_generate_mapping_csv.py  ida_generate_stubs.py  ida_import_match_status.py  ida_import_msvc_map_data.py  ida_report_progress.py  ida_sync_to_gta2_repo_names.py  mapping.csv  re_create_target_obj.bat  re_create_target_obj.sh  report_progress_to_discord.py
Scripts/bin_comp/: README.md  check_duplicate_globals.py  compare_all_functions.py  compare_function.py  coverage_frontend.txt  coverage_trace_funcs.txt  download_exe.ps1  download_exe.py  ida_dump_func_data.py  msvc_dump_func_data.py  msvc_dump_new_data.py  og_function_data.csv  og_function_data_v105.csv  og_function_data_v96f.csv  post_process_asm.py  requirements.txt
Scripts/ida/: functions_data.json  generate_func_json.py  generate_globals_list.py  import_func_json.py  import_match_status.py  import_msvc_map_data.py  report_progress2.py
Scripts/ida/plugin/: gta2_plugin.py
Scripts/ida/plugin/gta2_tools/: stubs_generator.py
Source/: Ambulance_110.cpp  Ambulance_110.hpp  Bink.cpp  Bink.hpp  BitSet32.hpp  BurgerKing_67F8B0.cpp  BurgerKing_67F8B0.hpp  Camera.cpp  Camera.hpp  CarAI_78.cpp  CarAI_78.hpp  CarInfo_808.cpp  CarInfo_808.hpp  CarPhysics_B0.cpp  CarPhysics_B0.hpp  Car_10.cpp  Car_10.hpp  Car_14_18.cpp  Car_14_18.hpp  Car_B0.cpp  Car_B0.hpp  Car_BC.cpp  Car_BC.hpp  Char_Pool.cpp  Char_Pool.hpp  ChickenLegend_48.cpp  ChickenLegend_48.hpp  CokeZero_100.cpp  CokeZero_100.hpp  Cranes.cpp  Cranes.hpp  Crushers.cpp  Crushers.hpp  Door_38.cpp  Door_38.hpp  Door_4D4.cpp  Door_4D4.hpp  Draw.cpp  Draw.hpp  DrawUnk_0xBC.cpp  (+245 more)
cmake/: vc6.cmake
reccmp/: .gitignore  96f-ascii.csv  96f-fix16.csv  96f-widechar.csv  ascii.csv  fix16.csv  floats.csv  generate.py  library.csv  widechar.csv
